--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -3,7 +3,7 @@
 <h3> Dog Name: <%= dog.name %></h3>
 <h4> Dog Owner: <%= dog.owner %></h3>
   
-<form action="dogs/edit/<%= idx %>" method="GET">
+<form action="/dogs/edit/<%= idx %>" method="GET">
 
     <button type='submit'>Edit Dog</button>
     
